@@ -310,6 +310,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * Fixed $wgFeedLimit
 * (bug 9270) Corrected help namespace name for Dutch Lower Saxon (nds-nl)
 * (bug 929, 4215) Expose "rcdays" user preference in Special:Preferences
+* (bug 9554) Extension-provided group name messages not used
 
 == Maintenance ==
 
